refactor(java-17): use the new toList() instead of Collectors.toList()